# c_oop

./: meson.build  readme.md
.github/workflows/: ci.yml
e2e/: Program.c  Program.h  ProgramResult.c  e2e.c  process.c  process.h
entrypoint/: coop.c
integrationTest/printer/: FilePrinterTest.c  NetworkPrinterTest.c
integrationTest/printer/fileprinter/: FilePrinterTest.c
integrationTest/printer/networkprinter/: NetworkPrinterTest.c
src/: FilePrinter.c  FilePrinter.h  Init.c  Init.h  ManipulatableString.c  ManipulatableString.h  NetworkPrinter.c  Printer.h  StringManipulator.c  StringManipulator.h  initialize.c  initialize.h
src/debug/: Debug.c  Debug.h
src/manipulatablestring/: ManipulatableString.c  ManipulatableString.h
src/printer/: FilePrinter.c  FilePrinter.h  NetworkPrinter.c  NetworkPrinter.h  Printer.c  Printer.h
src/printer/fileprinter/: FilePrinter.c  FilePrinter.h
src/printer/networkprinter/: NetworkPrinter.c  NetworkPrinter.h
src/shape/: CustomShape.h  LineShape.c  LineShape.h  RectShape.c  RectShape.h  Shape.c  Shape.h
src/shape/customshape/: CustomShape.c  CustomShape.h
src/shape/lineshape/: LineShape.c  LineShape.h
src/shape/rectshape/: RectShape.c  RectShape.h
test/: FilePrinterTest.c  ManipulatableStringTest.c  NetworkPrinterTest.c  e2e.c
test/debug/: DebugTest.c
test/manipulatablestring/: ManipulatableStringTest.c
test/printer/: FilePrinterTest.c  NetworkPrinterTest.c  PrinterTest.c
test/shape/: CustomShapeTest.c  LineShapeTest.c  RectShapeTest.c  ShapeTest.c
test/shape/customshape/: CustomShapeTest.c
(+3 files in other folders)
